--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=journalApp
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
