Integrated Java Mail Sender to send Email

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,19 @@ spring:
       uri: ${MONGODB_URI}
       database: journaldb
       auto-index-creation: true
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_ID}
+    password: ${EMAIL_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 logging:
   level:
     org:
@@ -11,6 +24,6 @@ logging:
         data:
           mongodb:
             core:
-              MongoTemplate=DEBUG:
-      mongodb:
-        driver=DEBUG:
+              MongoTemplate: DEBUG
+    mongodb:
+      driver: DEBUG
