--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
